# smolmodels

./: .gitignore  CLAUDE.md  MODEL_CARD.md  README.md  chat.py  classifier_demo.py  clip_eval.ipynb  config.py  convert_dataset_to_dpo.py  dalle.py  eval.py  evaluate.py  evaluate_seq2seq.py  evaluate_upsampling.py  finetune.py  generate.py  generate_synthetic_data.py  generate_t5.py  generate_vllm.py  get_logprobs.py  gguf_inference.py  gguf_inference.sh  gpt_generate.py  gradio_ui.py  hello.py  language_classifier.py  modal_entrypoint.py  modal_trl.py  modal_vllm.py  model.py  process_dataset.py  pyproject.toml  requirements-discordbot.txt  requirements-optional.txt  requirements-vllm.txt  requirements.txt  roleplay_conv_viewer.py  run_inference.py  submit.sh  submit_datagen.sh  (+18 more)
.claude/: settings.local.json
.zed/: debug.json
chat_templates/: llama3.jinja  ministral_8b.jinja  smollmv2.jinja
data/: creative_writing_prompts_v2.2.json  drawbench.csv
dataset/: aesthetic_score.py  bert_pretrain.py  classifier.py  code.py  conversation.py  function_calling.py  info_extract.py  llava.py  parti.py  playwright.py  pretrain.py  prompt_classifier.py  prompt_upsample.py  reasoning.py  squad.py  utils.py  writing.py
dataset_files/: connections_prompts.jsonl  creative_writing_judging_prompt.txt  creative_writing_prompts_v3.json  slop_list.json  slop_list_bigrams.json  slop_list_trigrams.json
evaluation/: code_execution.py  python_interpereter.py
finetuning/: pyproject.toml  tasks.py
finetuning/evaluation/dataset/: code.py  function_calling.py  pretrain.py
finetuning/model/: callbacks.py  utils.py
gyms/: __init__.py  run.py  utils.py
gyms/twenty_questions/: data.py  env.py
model/: callbacks.py  causal_lm.py  data.py  llama.py  params.py  reasoning.py  roberta.py  simple_bert.py  t5.py  utils.py  vit.py
model/pretrain/: bert.py  gpt.py
model/simple_bert/: model.py
models/: gpt.py  t5.py  tokenizer.py
notebooks/: backtranslate_txt_output.ipynb  books3.ipynb  clip_eval.ipynb  codecontests_code_exec.ipynb  codecontests_exploration.ipynb  connections_dev.ipynb  connections_reward_dev.ipynb  cot_parsing_dev.ipynb  creative_writing_bench.ipynb  datacommons_exploration.ipynb  dataset_review.ipynb  download_offline.ipynb  dpo_analysis.ipynb  dpo_trainer_dev.ipynb  dpo_trainer_test.ipynb  environment_dev.ipynb  eq_bench.ipynb  eval_analysis.ipynb  grpo_trainer_dev.ipynb  grpo_writing_dev.ipynb  gutenberg_annotate.ipynb  gutenberg_backtranslate.ipynb  gutenberg_dev.ipynb  llm_ft_dev.ipynb  reflection_datasets_exploration.ipynb  reward_modeling.ipynb  roleplay_conversation_datasets.ipynb  script_parsing_dev.ipynb  structured_extraction_dev.ipynb  template.jinja  trainer_dev.ipynb  writing_dpo_dev.ipynb
prompt_templates/: creative_writing_criteria.txt  creative_writing_criteria_strict.txt  creative_writing_judging_prompt.txt  negative_criteria.txt
quantized/PY007/TinyLlama-1.1B-Chat-v0.3/: config.json  generation_config.json
scripts/: MODEL_CARD.md  chat_gpt.py  convert_dataset_to_dpo.py  convert_hf_checkpoint.py  convert_hf_to_gguf.py  dalle_aug_discord.py  download.py  eval.jsonl  generate_gpt.py  generate_superprompt_samples.py  modal_definitions.py  modal_definitons.py  process_imagereward.py  roleplay_conv_viewer.py  run_vllm.py  run_vllm_server.sh  trajectory_formatting.py  trajectory_tui.py  utils.py
seed_data_files/: domain_specific_tasks.csv
synthetic_data/: __init__.py  conversion.py  generation.py  generation_utils.py  gutenberg_parser.py  gutenberg_process.py  judgemark.py  labels.py  prompts.py  pyproject.toml  screenplay_parser.py  tasks.py  tools.py  utils.py  writing_judge.py
synthetic_data/creative_writing_bench/: __init__.py  bench.py  prompts.py  slop_score.py
synthetic_data/tasks/: __init__.py  evals.py  multistep.py  next_chapter.py  roleplaying.py  roleplaying_prompts.py  roleplaying_tools.py  tasks.py  writing.py
tests/: test_code_extraction.py  test_connections.py  test_docstring_extraction.py  test_entity_extraction.py  test_generation_tool_calls.py  test_markdown_formatting.py  test_next_chapter.py  test_parser.py  test_reasoning.py  test_roleplaying.py  test_roleplaying_integration.py  test_summary_continuation.py  test_twenty_questions.py
training/: __init__.py
trl_wrapper/: __init__.py  dpo_pruning.py  dpo_trainer.py  offline_grpo.py  pyproject.toml  sft_trainer.py  trainer_wrapper.py  wrapper_config.py
wandb/: latest-run
wandb/run-20230701_185943-xbuxqs61/: run-xbuxqs61.wandb
wandb/run-20230701_185943-xbuxqs61/files/: config.yaml  requirements.txt  wandb-metadata.json
