[project]
name = "smolmodels"
version = "0.1.0"
description = "Collection of personal projects related to language models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets",
    "evaluate",
    "wandb",
    "fire",
    "huggingface-hub[hf-transfer]",
    "tabulate==0.9.0",
    "python-dotenv==1.0.1",
    "fsspec==2023.10.0",
    "matplotlib",
    "openai==1.101.0",
    "unidecode",
    "loguru",
    "webdataset",
    "wheel",
    "rich>=13.9.2",
    "polars>=1.12.0",
    "ninja>=1.11.1.1",
    "packaging>=24.1",
    "fastapi>=0.115.5",
    "uvicorn>=0.32.1",
    "gradio==5.27.0",
    "scipy",
    "sentencepiece",
    "einops",
    "mistune>=3.1.0",
    "ruff>=0.8.1",
    "chardet>=5.2.0",
    "jsonlines>=4.0.0",
    "pandas>=2.2.3",
    "modal==1.2.4",
    "pydantic>=2.10.6",
    "pytest>=8.3.4",
    "synthetic-data",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "ruff>=0.8.1",
    "pyright>=1.1.404",
    "pytest>=8.3.4",
    "ipykernel>=6.29.5",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.2",
    "plotting>=0.0.7",
    "rich>=13.9.2",
    "ty>=0.0.4",
    "marimo>=0.18.4",
    "ipywidgets>=8.1.8",
]

[tool.uv]
default-groups = ["dev"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu124", marker = "sys_platform != 'darwin'" }]
torchvision = { index = "pytorch-cu124", marker = "sys_platform != 'darwin'" }
torchaudio = { index = "pytorch-cu124", marker = "sys_platform != 'darwin'" }
synthetic-data = { path = "./synthetic_data", editable = true }


[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true


[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
