[project]
name = "synthetic-data"
version = "0.1.0"
description = "Synthetic data generation pipeline for smolmodels - handles LLM-based data generation"
requires-python = ">=3.12"
dependencies = [
    "openai==1.101.0",
    "anthropic==0.64.0",
    "google-genai==1.32.0",
    "tiktoken",
    "jinja2>=3.1.0",
    "trio>=0.27.0",
    "httpx>=0.28.0",
    "datasets",
    "huggingface-hub[hf-transfer]",
    "polars>=1.12.0",
    "pandas>=2.2.3",
    "loguru",
    "pydantic>=2.10.6",
    "tabulate==0.9.0",
    "fire",
    "rich>=13.9.2",
]

[dependency-groups]
dev = [
    "ruff>=0.8.1",
    "pytest>=8.3.4",
    "ty>=0.0.4",
]
