[project]
name = "trl-wrapper"
version = "0.1.0"
description = "TRL training wrapper for smolmodels - handles SFT, DPO, and GRPO training"
requires-python = ">=3.12"
dependencies = [
    "torch==2.6.0",
    "transformers==4.56.0",
    "trl==0.22.0",
    "peft>=0.13.2",
    "accelerate",
    "datasets",
    "lightning>=2.5.0.post0",
    "wandb",
    "loguru",
    "rich>=13.9.2",
]

[dependency-groups]
training = [
    "setuptools_scm",
    "cmake",
    "bitsandbytes>=0.44.1; sys_platform == 'linux'",
    "liger-kernel>=0.5.2; sys_platform == 'linux'",
    "flash-attn; sys_platform == 'linux'",
    "vllm==0.8.5",
]

dev = [
    "ruff>=0.8.1",
    "pyright>=1.1.404",
    "pytest>=8.3.4",
]

[tool.uv]
default-groups = ["dev"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu124", marker = "sys_platform != 'darwin'" }]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
